@@ -14,6 +14,7 @@ Release:    RGFW 1.7.5-dev
 - make sure mouse is regrabbed on refocus 
 - try to fix black flashing issue, zero out XSetWindowAttributes object 
 - fix msvc warnings (wchar, explicitly request an "A" function)
+- add RGFW_window_mouseHeld
 
 Release:    RGFW 1.7 (May 6, 2025)
 -----------------------------------------------
